fixed title spacing on mobile for projects

--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -138,4 +138,8 @@ img {
   margin-bottom:20px;
   border: solid 1px black;
 }
+
+.name{
+  margin-bottom: 0px;
+}
 }
